--- a/index.html
+++ b/index.html
@@ -1,9 +1,149 @@
-<!DOCTYPE>
-<html>
-  <head>
-    <title>mmp</title>
-  </head>
-  <body>
-    我是一只粉刷匠,刷了东墙,刷西墙  加油加油  玩起来
-  </body>
+<!DOCTYPE html>
+<html lang="zh">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>花脸猫</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            background-color: rgb(117, 238, 191);
+            color: blanchedalmond;
+        }
+
+        header {
+            display: block;
+            height: 80px;
+            /* background-color: aqua; */
+            background-image: linear-gradient(to right, rgb(9, 11, 141), rgba(255, 120, 0, 0.5), rgb(108, 6, 155));
+        }
+
+        header #title {
+            display: block;
+            text-decoration: none;
+            font-size: 30px;
+            font-weight: bold;
+            /* margin-left: 100px; */
+            padding-left: 80px;
+            line-height: 80px;
+            cursor: default;
+            color: darkorange;
+            background-image: url("banner.jpg");
+           
+            background-size:100% 100%;
+        }
+
+        nav {
+            display: block;
+            background-color: rgb(4, 43, 80);
+        }
+
+        nav #nav {
+            font-size: 0;
+            list-style-type: none;
+            display: block;
+            margin: 0px auto;
+            width: 80%;
+            /* border: 1px solid red; */
+        }
+
+        nav #nav li {
+            display: inline-block;
+            width: 20%;
+        }
+
+
+        nav #nav li a:link,
+        nav #nav li a:visited {
+            display: inline-block;
+            font-size: 18px;
+            font-weight: bold;
+            border-radius: 50%;
+            color: #FFFFFF;
+            width: 100%;
+            text-align: center;
+            padding: 8px;
+            text-decoration: none;
+            /*清楚a标签样式*/
+            text-transform: uppercase;
+            /*转换大小写*/
+        }
+
+        nav #nav li a:hover,
+        nav #nav li a:active {
+            /* background-color: #7A991A; */
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+
+        #main {
+            box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            /* Firefox */
+            -webkit-box-sizing: border-box;
+            /* Safari */
+
+            margin: 10px auto 10px;
+            width: 80%;
+            min-height: 800px;
+            border-radius: 15px;
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+
+
+        #main ul{
+            list-style-type: none;
+        }
+
+        footer {
+            display: block;
+            background-color: rgb(4, 43, 80);
+        }
+        footer div{
+            margin: 0px auto;
+            width: 80%;
+            font-size: 16px;
+            color: #FFFFFF;
+            width: 100%;
+            text-align: center;
+            padding: 15px;
+        }
+        footer div a:visited,footer div a:link{
+            text-decoration: none;
+            color: #FFFFFF;
+        }
+        footer div a:hover{
+            color: darkorange;
+        }
+    </style>
+</head>
+
+<body>
+    <header> <a id="title" href="">花脸猫</a>
+    </header>
+    <nav>
+        <ul id="nav">
+            <li><a href="#">首页</a></li>
+            <li><a href="#">前端</a></li>
+            <li><a href="#">编程</a></li>
+            <li><a href="#">生活</a></li>
+            <li><a href="#">小例子</a></li>
+        </ul>
+    </nav>
+
+    <div id="main">
+        <ul>
+            <li><a href="">链接主页</a> </li>
+            <li><a href="">考试系统</a></li>
+        </ul>
+    </div>
+    <article>
+    </article>
+    <footer><div> &copy; 2020花脸猫. <a href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank">豫ICP备18014223号</a></div></footer>
+</body>
+
 </html>
