--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <script src="js/contentsList.js"></script>
     <link rel="stylesheet" href="css/main.css">
+
+    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Cache" content="no-cache">
 </head>
 
 <body>
