--- a/project/word/WebProduction.html
+++ b/project/word/WebProduction.html
@@ -4,7 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>花脸猫</title>
+    <link rel="shortcut icon" href="../../favicon.ico" />
     <link rel="stylesheet" href="../../css/main.css">
+
+    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Cache" content="no-cache">
 </head>
 
 <body>
