--- a/project/list/index.html
+++ b/project/list/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/index.css" />
     <script src="js/list.js"></script>
     <script src="js/index.js"></script>
+    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Cache" content="no-cache">
 </head>
 <body>
     <p id="title">&sect; Hello My Word!</p>
