--- a/index.html
+++ b/index.html
@@ -1,71 +1,81 @@
-﻿<!DOCTYPE html>
-<html lang="zh">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>花脸猫</title>
     <link rel="shortcut icon" href="favicon.ico" />
     <script src="js/contentsList.js"></script>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/index.css">
 
     <meta http-equiv="Expires" content="0">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Cache-control" content="no-cache">
     <meta http-equiv="Cache" content="no-cache">
+
 </head>
 
 <body>
-    <header> <a id="name" href="index.html"> <img src="images/banner.png" alt="小猫咪"> <span>花脸猫</span></a>
-    </header>
+
     <nav>
         <ul id="nav">
-            <li><a href="index.html">首页</a></li>
-            <li><a href="index0.html">前端</a></li>
-            <li><a href="index1.html">编程</a></li>
-            <li><a href="index2.html">生活</a></li>
-            <li><a href="index3.html">例子</a></li>
+            <img src="images/banner.png" alt="Logo"
+            onclick="window.location.href='project/list/index.html';"/>
+            <li onclick="action(4);">首页</li>
+            <li onclick="action(0);">前端</li>
+            <li onclick="action(1);">编程</li>
+            <li onclick="action(2);">生活</li>
+            <li onclick="action(3);">例子</li>
         </ul>
     </nav>
 
     <div id="main">
-        <ul id="contentsList">
-          <!--   <li><a href="project/list/index.html">
-                    <span class="title">花脸猫收藏的网址链接</span>
-                    <span class="family">类别:小例子</span>
-                </a></li>
-            <li><a href="project/exam/index.html">
-                    <span class="title">花脸猫做的在线考试系统</span>
-                    <span class="family">类别:小例子</span>
-                </a></li> -->
+        <main>
+            <ul id="contentsList">
+                <li><a href="project/list/index.html">
+                        <span class="title">花脸猫收藏的网址链接</span>
+                        <span class="family">类别:小例子</span>
+                    </a></li>
+                <li><a href="project/exam/index.html">
+                        <span class="title">花脸猫做的在线考试系统</span>
+                        <span class="family">类别:小例子</span>
+                    </a></li>
             </ul>
+        </main>
 
-        </div>
 
         <footer>
-            <div> &copy; 2020-2021花脸猫. <a href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank">豫ICP备18014223号</a>
+            <div> &copy; 2020-2021花脸猫. <a href="https://beian.miit.gov.cn/#/Integrated/index"
+                    target="_blank">豫ICP备18014223号</a>
             </div>
         </footer>
+    </div>
 
-        <script>
-            var contentsList = document.getElementById("contentsList");
-            for(var i =content.length -1;i>=0;i--){
-                var str = "";
-                if(content[i].familyID === 3){
-                    str = `<li><a href="`+content[i].url+`" target="_blank">
-                    <span class="title">`+content[i].title+`</span>
-                    <span class="family">`+content[i].family+`</span>
-                    </a></li>`;
-                }else{
-                    str = `<li><a href="`+content[i].url+`">
-                    <span class="title">`+content[i].title+`</span>
-                    <span class="family">`+content[i].family+`</span>
-                    </a></li>`;
+    <script>
+        var contentsList = document.getElementById("contentsList");
+        function action(id) {
+            contentsList.innerHTML = "";
+            if (id === 4) {
+                for (var i = content.length - 1; i >= 0; i--) {
+                    contentsList.innerHTML += `<li><a href="` + content[i].url + `">
+                        <span class="title">`+ content[i].title + ` </span>
+                        <span class="family"> `+ content[i].family + `</span>
+                        </a></li>`;
+
                 }
-
-                contentsList.innerHTML += str;
+            } else {
+                for (var i = content.length - 1; i >= 0; i--) {
+                    if (content[i].familyID === id) {
+                        contentsList.innerHTML += `<li><a href="` + content[i].url + `">
+                            <span class="title">`+ content[i].title + ` </span>
+                            <span class="family"> `+ content[i].family + `</span>
+                            </a></li>`;
+                    }
+                }
             }
-        </script>
-    </body>
+        }
+        action(4);
+    </script>
+</body>
 
-    </html>
+</html>
