--- a/project/word/WebProduction.html
+++ b/project/word/WebProduction.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>花脸猫</title>
     <link rel="shortcut icon" href="../../favicon.ico" />
-    <link rel="stylesheet" href="../../css/main.css">
+    <link rel="stylesheet" href="../website_old001/css/main.css">
 
     <meta http-equiv="Expires" content="0">
     <meta http-equiv="Pragma" content="no-cache">
