--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="花脸猫,技术分享,读书笔记,个人学习,网页练习" />
+    <meta name="description" content="花脸猫是一个个人网站,用于练习学习前端技术,同时通过文章和页面效果的方式记录学习成果,还有更加真实个性的生活日常,欢迎访问学习,欢迎友链互换PaintedCat@qq.com" />
     <title>花脸猫</title>
-    <link rel="shortcut icon" href="favicon.ico" />
-    <script src="js/contentsList.js"></script>
-    <link rel="stylesheet" href="css/index.css">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
     <meta http-equiv="Expires" content="0">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Cache-control" content="no-cache">
     <meta http-equiv="Cache" content="no-cache">
+
+    <link rel="shortcut icon" href="favicon.ico" />
+    <script src="js/contentsList.js"></script>
+    <link rel="stylesheet" href="css/index.css">
 
 </head>
 
