--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="花脸猫是一个个人网站,用于练习学习前端技术,同时通过文章和页面效果的方式记录学习成果,还有更加真实个性的生活日常,欢迎访问学习,欢迎友链互换PaintedCat@qq.com" />
     <title>花脸猫</title>
 
-    <!-- <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="Expires" content="0">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Cache-control" content="no-cache">
