--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 
 
         <footer>
-            <div> &copy; 2020-2021花脸猫. <a href="https://beian.miit.gov.cn/#/Integrated/index"
-                    target="_blank">豫ICP备18014223号</a>
+            <div> &copy; 2020-2021花脸猫 <a href="https://beian.miit.gov.cn/#/Integrated/index"
+                    target="_blank"></a>
+                    <!-- 豫ICP备18014223号 -->
             </div>
         </footer>
     </div>
