--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -70,9 +70,11 @@
         "GitHub@https://github.com/@2",
         "百度飞桨@https://www.paddlepaddle.org.cn/@0",
         "AIstudio@https://aistudio.baidu.com/@2",
+        "知识星球@https://wx.zsxq.com/dweb2/@2",
 
         "br@2",
-
+        "中国大学MOOC@https://www.icourse163.org/",
+        "学堂在线@http://www.xuetangx.com/@5",
         "哈佛公开课@https://pll.harvard.edu/@2",
         "极客时间@https://time.geekbang.org/@2",
         "大鹏教育@http://www.dapengjiaoyu.com/@4",
@@ -96,7 +98,6 @@
         "博客园@https://www.cnblogs.com/@2",
         "51CTO@http://www.51cto.com/@4",
         "新浪微博@https://weibo.com/@3",
-        "学堂在线@http://www.xuetangx.com/@5",
         "智慧教育@https://www.zxx.edu.cn/@4",
         "华为课堂@https://classroom.devcloud.huaweicloud.com/home",
         "华为学云@https://ilearningx.huawei.com/",
