--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -73,7 +73,7 @@
         "知识星球@https://wx.zsxq.com/dweb2/@2",
 
         "br@2",
-        "中国大学MOOC@https://www.icourse163.org/",
+        "中国大学MOOC@https://www.icourse163.org/@1",
         "学堂在线@http://www.xuetangx.com/@5",
         "哈佛公开课@https://pll.harvard.edu/@2",
         "极客时间@https://time.geekbang.org/@2",
@@ -99,19 +99,19 @@
         "51CTO@http://www.51cto.com/@4",
         "新浪微博@https://weibo.com/@3",
         "智慧教育@https://www.zxx.edu.cn/@4",
-        "华为课堂@https://classroom.devcloud.huaweicloud.com/home",
-        "华为学云@https://ilearningx.huawei.com/",
-        "阿里云大学@https://edu.aliyun.com/",
-        "ZCOOL站酷@https://www.zcool.com.cn/",
-        "seeseed@https://www.seeseed.com/",
-        "花瓣@https://huaban.com/",
-        "觅元素@http://www.51yuansu.com/",
-        "阿里图标@https://www.iconfont.cn/",
-        "ZDZN@https://www.zdzn.net/",
-        "万有导航@http://wanyouw.com/",
-        "今日热榜@https://tophub.today/",
-        "wikiHow@https://zh.wikihow.com/",
-        "花脸猫@https://shangcc.top/",
+        "华为课堂@https://classroom.devcloud.huaweicloud.com/home@4",
+        "华为学云@https://ilearningx.huawei.com/@5",
+        "阿里云大学@https://edu.aliyun.com/@3",
+        "ZCOOL站酷@https://www.zcool.com.cn/@5",
+        "seeseed@https://www.seeseed.com/@4",
+        "花瓣@https://huaban.com/@5",
+        "觅元素@http://www.51yuansu.com/@3",
+        "阿里图标@https://www.iconfont.cn/@2",
+        "ZDZN@https://www.zdzn.net/@0",
+        "万有导航@http://wanyouw.com/@0",
+        "今日热榜@https://tophub.today/@0",
+        "wikiHow@https://zh.wikihow.com/@1",
+        "花脸猫@https://shangcc.top/@2",
 
         "br@2",
 
