--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -170,6 +170,7 @@
         "nottingham@https://www.mnot.net/",
         "绿叶学习网@http://www.lvyestudy.com/",
         "七空幻音@https://www.acgxt.com/",
+        "《自律修炼手册》作者@https://stevepavlina.com/@4",
 
         "br@2",
 
