--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -85,6 +85,7 @@
         "org.FCC@https://www.freecodecamp.org/learn@0",
         "LeetCode@https://leetcode-cn.com/@0",
         "微信读书@https://weread.qq.com/@2",
+        "头歌实践平台@https://www.educoder.net/@3",
 
         "br@2",
 
