--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -67,6 +67,8 @@
         "ProcessOn@https://www.processon.com/@0",
         "CODEPEN@https://codepen.io/@0",
         "语雀@https://www.yuque.com/@3",
+        "微信公众号@https://mp.weixin.qq.com/@4",
+        "CSDN@https://www.csdn.net/@1",
         "GitHub@https://github.com/@2",
         "百度飞桨@https://www.paddlepaddle.org.cn/@0",
         "AIstudio@https://aistudio.baidu.com/@2",
@@ -95,7 +97,7 @@
         "JS秘密花园@http://bonsaiden.github.io/JavaScript-Garden/zh/@2",
         "BS中文网@http://www.bootcss.com/@4",
         "PHP中文网@https://www.php.cn/@2",
-        "CSDN@https://www.csdn.net/@1",
+        // "CSDN@https://www.csdn.net/@1",
         "博客园@https://www.cnblogs.com/@2",
         "51CTO@http://www.51cto.com/@4",
         "新浪微博@https://weibo.com/@3",
