--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -244,8 +244,10 @@
         "AcFun@http://www.acfun.cn/",
         "美拍视频@https://www.meipai.com/",
         "斗鱼直播@https://www.douyu.com/member/cp/getFansBadgeList",
-        "vip视频解析@http://peng3.com/vip",
-        "vip全民影视@https://www.daga.cc/",
+        "vip视频解析@http://www.wpsseo.cn/",
+        // "vip视频解析@http://peng3.com/vip",
+        "vip全民影视@https://timecn.cn/",
+        // "vip全民影视@https://www.daga.cc/",
         "在线拼图@https://www.jigsawplanet.com/",
         "嘀哩嘀哩@http://www.dilidili.name/",
         // "6@vip视频解析@images/qmaile.ico@http://www.qmaile.com/",
