--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -119,6 +119,7 @@
         "br@2",
 
         // 学习练习 1 /favicon.ico
+        "go语言文档@https://go-zh.org/",
         "高中物理@http://gaozhongwuli.com/",
         "CCF CSP@http://www.cspro.org/",
         "videvo@https://www.videvo.net/",
