--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -84,7 +84,8 @@
         "高教国培@https://gp.teacher-edu.cn/@5",
         "牛客网@https://www.nowcoder.com/@1",
         "哔哩哔哩@https://www.bilibili.com/@1",
-        "org.FCC@https://www.freecodecamp.org/learn@0",
+        // "org.FCC@https://www.freecodecamp.org/learn@0",
+        "org.FCC@https://www.freecodecamp.org/chinese/learn/@0",
         "LeetCode@https://leetcode-cn.com/@0",
         "微信读书@https://weread.qq.com/@2",
         "头歌实践平台@https://www.educoder.net/@3",
