--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -109,6 +109,8 @@
         "ZCOOL站酷@https://www.zcool.com.cn/@5",
         "seeseed@https://www.seeseed.com/@4",
         "花瓣@https://huaban.com/@5",
+        "觅知网@https://www.51miz.com/@1",
+        "包图网@https://ibaotu.com/@5",
         "觅元素@http://www.51yuansu.com/@3",
         "阿里图标@https://www.iconfont.cn/@2",
         "ZDZN@https://www.zdzn.net/@0",
@@ -285,7 +287,6 @@
 
         // UI素材  /favicon.ico
         "SSYER素材@https://www.ssyer.com/",
-        "包图网@https://ibaotu.com/",
         "千库网@https://588ku.com/",
         // "8@easyicon@images/easyicon.ico@https://www.easyicon.net/",
         "pixabay@https://pixabay.com/",
