--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -38,8 +38,8 @@
         #like a {
             text-decoration: none;
             display: inline-block;
-            padding: 7px;
-            margin: 8px 6px;
+            padding: 10px;
+            margin: 10px 8px;
             min-width: 50px;
             height: 20px;
             line-height: 20px;
@@ -64,6 +64,7 @@
 <script>
     var webs = [
         "百度一下@http://www.baidu.com/@1",
+        "河南质量工程职业学院@https://www.zlxy.edu.cn/@3",
         "ProcessOn@https://www.processon.com/@0",
         "CODEPEN@https://codepen.io/@0",
         "语雀@https://www.yuque.com/@3",
@@ -73,6 +74,12 @@
         "百度飞桨@https://www.paddlepaddle.org.cn/@0",
         "AIstudio@https://aistudio.baidu.com/@2",
         "知识星球@https://wx.zsxq.com/dweb2/@2",
+        "学习强国@https://www.xuexi.cn/@3",
+        "无名小站@https://www.btnull.org/@2",
+        "终身学习@https://le.ouchn.cn/home@1",
+        "人邮教育@https://www.ryjiaoyu.com/@4",
+        // "智慧教育@https://www.zxx.edu.cn/@4",
+        "国家智慧教育服务平台@https://www.smartedu.cn/@3",
 
         "br@2",
         "中国大学MOOC@https://www.icourse163.org/@1",
@@ -102,7 +109,6 @@
         "博客园@https://www.cnblogs.com/@2",
         "51CTO@http://www.51cto.com/@4",
         "新浪微博@https://weibo.com/@3",
-        "智慧教育@https://www.zxx.edu.cn/@4",
         "华为课堂@https://classroom.devcloud.huaweicloud.com/home@4",
         "华为学云@https://ilearningx.huawei.com/@5",
         "阿里云大学@https://edu.aliyun.com/@3",
@@ -118,6 +124,7 @@
         "今日热榜@https://tophub.today/@0",
         "wikiHow@https://zh.wikihow.com/@1",
         "花脸猫@https://shangcc.top/@2",
+        "旁门左道导航网站@https://www.goto-mars.com/people/aLYqyNvYvd@4",
 
         "br@2",
 
