--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -69,9 +69,10 @@
         "微信读书@https://weread.qq.com/@2",
         "微信公众号@https://mp.weixin.qq.com/@4",
         "ProcessOn@https://www.processon.com/@0",
+        "Excalidraw@https://excalidraw.com/@3",
         "CODEPEN@https://codepen.io/@0",
         "语雀@https://www.yuque.com/@3",
-        "斗鱼@https://www.douyu.com/directory/myFollow",
+        "斗鱼@https://www.douyu.com/directory/myFollow@1",
         "GitHub@https://github.com/@2",
         // "智慧教育@https://www.zxx.edu.cn/@4",
 
@@ -142,9 +143,14 @@
         "br@1",
         "AIGC成长计划@https://ait.cleword.com/new-app/plan",
         "风变成长计划@https://ai.cleword.com/app/",
+        "AI综合应用人才培养计划@https://aigc.cleword.com/new-app/plan",
         "AI艺术家@https://art.aigcfun.com/",
         "AI对话大师@https://ai-edu.aigcfun.com/",
         "AIGC前沿站@https://wufeng.cleword.com/app/",
+        
+        "br@1",
+        "扣子@https://www.coze.cn/",
+
 
         "br@2",
         "网络规划设计师培训@https://apprumikcw64576.pc.xiaoe-tech.com/",
