--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -66,7 +66,6 @@
 
         "bing搜索@https://cn.bing.com/@1",
         "百度一下@http://www.baidu.com/@1",
-        "豆包@https://www.doubao.com/@3",
         "微信读书@https://weread.qq.com/@2",
         "微信公众号@https://mp.weixin.qq.com/@4",
         "ProcessOn@https://www.processon.com/@0",
@@ -76,6 +75,10 @@
         "斗鱼@https://www.douyu.com/directory/myFollow@1",
         "GitHub@https://github.com/@2",
         // "智慧教育@https://www.zxx.edu.cn/@4",
+        "org.FCC@https://www.freecodecamp.org/chinese/learn/@0",
+        "哔哩哔哩@https://www.bilibili.com/@1",
+        "哔哩下载@https://zhouql.vip/bilibili/@5",
+        "知乎@https://www.zhihu.com/@3",
 
 
         "br@2",
@@ -83,7 +86,6 @@
         "LeetCode@https://leetcode-cn.com/@0",
         "牛客网@https://www.nowcoder.com/@1",
         "PAT考试@https://www.patest.cn/@2",
-        "中国大学MOOC@https://www.icourse163.org/@1",
         "学堂在线@http://www.xuetangx.com/@5",
         "终身学习@https://le.ouchn.cn/home@1",
         "ApeClass@https://www.apeclass.com/@2",
@@ -91,10 +93,13 @@
         "阿里云大学@https://edu.aliyun.com/@3",
 
         "br@2",
-        "org.FCC@https://www.freecodecamp.org/chinese/learn/@0",
-        "哔哩哔哩@https://www.bilibili.com/@1",
-        "哔哩下载@https://zhouql.vip/bilibili/@5",
-        "知乎@https://www.zhihu.com/@3",
+        "中国大学MOOC@https://www.icourse163.org/",
+        "Python@https://www.python.org/",
+        "Python123@https://www.python123.io/",
+        "豆包@https://www.doubao.com/@3",
+
+
+        "br@1",
         "runoob@http://www.runoob.com/@1",
         "MDN@https://developer.mozilla.org/zh-CN/@3",
         // "W3C@https://www.w3.org/@5",
@@ -107,6 +112,15 @@
         "one.FCC@https://learn.freecodecamp.one",
 
 
+        "br@2",
+        "学校VPN@https://117.158.113.226:6443/@4",
+        // "学校OA@http://192.168.200.222:8080/@4",
+        "河南质量工程职业学院@https://www.zlxy.edu.cn/@3",
+        "实习备案管理平台@https://sxba.zcj.jyt.henan.gov.cn/@5",
+        "人邮教育@https://www.ryjiaoyu.com/@4",
+        "河南双师型教师管理@http://ssrz.ghlearning.com/@1",
+        "高效辅导员队伍平台@https://www.gxfdy.edu.cn/fdyfn/index.html#/login@2",
+        "平顶山社科项目申报@http://s.pdsskl.cn/@4",
 
 
         "br@2",
@@ -121,15 +135,6 @@
         "百度飞桨@https://www.paddlepaddle.org.cn/@0",
         "头歌实践平台@https://www.educoder.net/@3",
 
-        "br@2",
-        "学校VPN@https://117.158.113.226:6443/@4",
-        // "学校OA@http://192.168.200.222:8080/@4",
-        "河南质量工程职业学院@https://www.zlxy.edu.cn/@3",
-        "实习备案管理平台@https://sxba.zcj.jyt.henan.gov.cn/@5",
-        "人邮教育@https://www.ryjiaoyu.com/@4",
-        "河南双师型教师管理@http://ssrz.ghlearning.com/@1",
-        "高效辅导员队伍平台@https://www.gxfdy.edu.cn/fdyfn/index.html#/login@2",
-        "平顶山社科项目申报@http://s.pdsskl.cn/@4",
 
         "br@2",
         "花瓣网@https://huaban.com/@1",
