--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -117,9 +117,11 @@
         // "学校OA@http://192.168.200.222:8080/@4",
         "河南质量工程职业学院@https://www.zlxy.edu.cn/@3",
         "实习备案管理平台@https://sxba.zcj.jyt.henan.gov.cn/@5",
+        "教务系统@https://zlgcxy.jw.chaoxing.com/@3",
+        "学习通@https://i.chaoxing.com/@2",
         "人邮教育@https://www.ryjiaoyu.com/@4",
-        "河南双师型教师管理@http://ssrz.ghlearning.com/@1",
-        "高效辅导员队伍平台@https://www.gxfdy.edu.cn/fdyfn/index.html#/login@2",
+        // "河南双师型教师管理@http://ssrz.ghlearning.com/@1",
+        // "高效辅导员队伍平台@https://www.gxfdy.edu.cn/fdyfn/index.html#/login@2",
         "平顶山社科项目申报@http://s.pdsskl.cn/@4",
 
 
