--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -76,9 +76,11 @@
         "GitHub@https://github.com/@2",
         // "智慧教育@https://www.zxx.edu.cn/@4",
         "org.FCC@https://www.freecodecamp.org/chinese/learn/@0",
+        "br@1",
         "哔哩哔哩@https://www.bilibili.com/@1",
         "哔哩下载@https://zhouql.vip/bilibili/@5",
         "知乎@https://www.zhihu.com/@3",
+        "鸿蒙开发者@https://developer.huawei.com/consumer/cn/",
 
 
         "br@2",
@@ -121,7 +123,7 @@
         "学习通@https://i.chaoxing.com/@2",
         "人邮教育@https://www.ryjiaoyu.com/@4",
         // "河南双师型教师管理@http://ssrz.ghlearning.com/@1",
-        // "高效辅导员队伍平台@https://www.gxfdy.edu.cn/fdyfn/index.html#/login@2",
+        "高效辅导员队伍平台@https://www.gxfdy.edu.cn/fdyfn/index.html#/login@2",
         "平顶山社科项目申报@http://s.pdsskl.cn/@4",
 
 
