--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -151,6 +151,16 @@
         "头歌实践平台@https://www.educoder.net/@3",
 
 
+
+        "br@2",
+        "扣子@https://www.coze.cn/",
+        "哩布哩布AI@https://www.liblib.art/",
+        "提示词生成器@https://www.promlib.com/",
+        "法术解析@https://novelai.dev/",
+        "esheep@https://www.esheep.com/",
+        "huggingface@https://hf-mirror.com/",
+        // "huggingface.co@https://hf-mirror.com/",
+
         "br@2",
         "花瓣网@https://huaban.com/@1",
         "ZCOOL站酷@https://www.zcool.com.cn/@5",
@@ -163,16 +173,13 @@
         "seeseed@https://www.seeseed.com/@4",
         "Pexels@https://www.pexels.com/zh-cn/",
 
-        "br@1",
+        "br@2",
         "AIGC成长计划@https://ait.cleword.com/new-app/plan",
         "风变成长计划@https://ai.cleword.com/app/",
         "AI综合应用人才培养计划@https://aigc.cleword.com/new-app/plan",
         "AI艺术家@https://art.aigcfun.com/",
         "AI对话大师@https://ai-edu.aigcfun.com/",
         "AIGC前沿站@https://wufeng.cleword.com/app/",
-
-        "br@1",
-        "扣子@https://www.coze.cn/",
 
 
 
@@ -203,6 +210,12 @@
         "知识星球@https://wx.zsxq.com/dweb2/@2",
         "学习强国@https://www.xuexi.cn/@3",
         "无名小站@https://www.btnull.org/@2",
+        "无名小站@https://www.gying.net/@2",
+        "无名小站@https://www.gying.org/@2",
+        "无名小站@https://www.gying.si/@2",
+        "无名小站@https://www.gying.in/@2",
+        "无名小站@https://www.gyg.la/@2",
+        "无名小站@https://www.gyg.si/@2", // shangcc123    123456scc
         "go语言文档@https://go-zh.org/",
         "高中物理@http://gaozhongwuli.com/",
         "videvo@https://www.videvo.net/",
