--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -124,6 +124,7 @@
         "中国大学MOOC@https://www.icourse163.org/",
         "Python@https://www.python.org/",
         "Python123@https://www.python123.io/",
+        "白月黑羽@https://www.byhy.net/",
         "豆包@https://www.doubao.com/@3",
 
 
