--- a/project/list2/index.html
+++ b/project/list2/index.html
@@ -133,6 +133,7 @@
         "Excalidraw@https://excalidraw.com/@0",
         "语雀@https://www.yuque.com/@0",
         "豆包@https://www.doubao.com/@0",
+        "金砖比赛@http://www.brskills.com/#/index@0",
 
         "微信读书@https://weread.qq.com/@1",
         "微信公众号@https://mp.weixin.qq.com/@1",
@@ -166,15 +167,15 @@
         "牛客网@https://www.nowcoder.com/@1",
         "PAT考试@https://www.patest.cn/@1",
         "哩布哩布AI@https://www.liblib.art/@1",
-        "扣子@https://www.coze.cn/@1",
         "AIstudio@https://aistudio.baidu.com/@1",
         "百度飞桨@https://www.paddlepaddle.org.cn/@1",
         "头歌实践平台@https://www.educoder.net/@1",
+        "扣子@https://www.coze.cn/@1",
+        "CTFHub@https://www.ctfhub.com/#/index@1",
 
         "br@1@1",
         "网络规划设计师培训@https://apprumikcw64576.pc.xiaoe-tech.com/@1",
         "软考报名@https://www.ruankao.org.cn/@1",
-
         "计算机学报@http://cjc.ict.ac.cn/@1",
         "软件学报@https://www.jos.org.cn/@1",
         "小型微型计算机系统@http://xwxt.sict.ac.cn/@1",
