--- a/project/list2/index.html
+++ b/project/list2/index.html
@@ -116,8 +116,8 @@
         // "学校OA@http://192.168.200.222:8080/@0",
         "河南质量工程职业学院@https://www.zlxy.edu.cn/@0",
         "实习备案管理平台@https://sxba.zcj.jyt.henan.gov.cn/@0",
-
-        "高效辅导员队伍平台@https://www.gxfdy.edu.cn/fdyfn/index.html#/login@0",
+        "就业管理平台@http://hnbysjy.jyt.henan.gov.cn/#/edulogin@0",
+        // "高效辅导员队伍平台@https://www.gxfdy.edu.cn/fdyfn/index.html#/login@0",
         "平顶山社科项目申报@http://s.pdsskl.cn/@0",
         "河南双师型教师管理@http://ssrz.ghlearning.com/@0",
         "上课点名@http://ck.birdfly.cn@0",  //   你的手机号  密码：6个8
