--- a/project/list2/index.html
+++ b/project/list2/index.html
@@ -135,6 +135,7 @@
         "豆包@https://www.doubao.com/@0",
         "br@1@0",
         "金砖比赛@http://www.brskills.com/#/index@0",
+        "御网杯@https://bm.hncsisc.com/@0",
 
         "微信读书@https://weread.qq.com/@1",
         "微信公众号@https://mp.weixin.qq.com/@1",
@@ -180,6 +181,7 @@
         "计算机学报@http://cjc.ict.ac.cn/@1",
         "软件学报@https://www.jos.org.cn/@1",
         "小型微型计算机系统@http://xwxt.sict.ac.cn/@1",
+        "中国知网@https://www.cnki.net/@1",
 
 
         "哔哩哔哩@https://www.bilibili.com/@2",
