--- a/project/list2/index.html
+++ b/project/list2/index.html
@@ -126,7 +126,7 @@
         "百度一下@http://www.baidu.com/@0",
         "觅知网@https://www.51miz.com/@0",
         "人邮教育@https://www.ryjiaoyu.com/@0",
-        "鸿蒙开发者@https://developer.huawei.com/consumer/cn/@0",
+        "网易邮箱@https://mail.163.com/@0",
         "教务系统@https://zlgcxy.jw.chaoxing.com/@0",
         "学习通@https://i.chaoxing.com/@0",
         "ProcessOn@https://www.processon.com/@0",
@@ -135,6 +135,7 @@
         "豆包@https://www.doubao.com/@0",
         "br@1@0",
         "金砖比赛@http://www.brskills.com/#/index@0",
+        "鸿蒙开发者@https://developer.huawei.com/consumer/cn/@0",
         "御网杯@https://bm.hncsisc.com/@0",
 
         "微信读书@https://weread.qq.com/@1",
