--- a/project/list2/index.html
+++ b/project/list2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
     <meta charset="UTF-8">
@@ -175,6 +175,7 @@
         "头歌实践平台@https://www.educoder.net/@1",
         "扣子@https://www.coze.cn/@1",
         "CTFHub@https://www.ctfhub.com/#/index@1",
+        "CTFHub说明@https://www.wolai.com/ctfhub/ivr4pfUUWnKyiufXbrJTXj@1",
 
         "br@1@1",
         "网络规划设计师培训@https://apprumikcw64576.pc.xiaoe-tech.com/@1",
