--- a/project/list2/index.html
+++ b/project/list2/index.html
@@ -127,7 +127,7 @@
         "觅知网@https://www.51miz.com/@0",
         "人邮教育@https://www.ryjiaoyu.com/@0",
         "网易邮箱@https://mail.163.com/@0",
-        "教务系统@https://zlgcxy.jw.chaoxing.com/@0",
+        "教务系统@https://zlgcxy.jw.chaoxing.com/admin/@0",
         "学习通@https://i.chaoxing.com/@0",
         "ProcessOn@https://www.processon.com/@0",
         "Excalidraw@https://excalidraw.com/@0",
