--- a/project/list2/index.html
+++ b/project/list2/index.html
@@ -133,10 +133,12 @@
         "Excalidraw@https://excalidraw.com/@0",
         "语雀@https://www.yuque.com/@0",
         "豆包@https://www.doubao.com/@0",
+        "deepseek@https://www.deepseek.com/@0",
         "br@1@0",
         "金砖比赛@http://www.brskills.com/#/index@0",
         "鸿蒙开发者@https://developer.huawei.com/consumer/cn/@0",
         "御网杯@https://bm.hncsisc.com/@0",
+        "御网杯考试@https://js.hncsisc.com/@0",
 
         "微信读书@https://weread.qq.com/@1",
         "微信公众号@https://mp.weixin.qq.com/@1",
