--- a/project/newList/index.html
+++ b/project/newList/index.html
@@ -76,7 +76,7 @@
         // "河南双师型教师管理@http://ssrz.ghlearning.com/@1",
         "高效辅导员队伍平台@https://www.gxfdy.edu.cn/fdyfn/index.html#/login@2",
         "平顶山社科项目申报@http://s.pdsskl.cn/@4",
-        "上课点名@http://ck.birdfly.cn@3",  //   你的手机号  密码：6个8
+        // "上课点名@http://ck.birdfly.cn@3",  //   你的手机号  密码：6个8
 
         "br@2",  // 公共常用
         "百度一下@http://www.baidu.com/@1",
