--- a/project/list2/index.html
+++ b/project/list2/index.html
@@ -120,7 +120,10 @@
         // "高效辅导员队伍平台@https://www.gxfdy.edu.cn/fdyfn/index.html#/login@0",
         "平顶山社科项目申报@http://s.pdsskl.cn/@0",
         "河南双师型教师管理@http://ssrz.ghlearning.com/@0",
-        "上课点名@http://ck.birdfly.cn@0",  //   你的手机号  密码：6个8
+        "河南继续教育学习@https://www.hnzjgl.gov.cn/@0",
+        "河南干部学习网@https://www.hngbwlxy.gov.cn/@0",
+
+        //"上课点名@http://ck.birdfly.cn@0",  //   你的手机号  密码：6个8
 
         "br@1@0",
         "百度一下@http://www.baidu.com/@0",
@@ -162,7 +165,8 @@
         "终身学习@https://le.ouchn.cn/home@1",
         "ApeClass@https://www.apeclass.com/@1",
         "51CTO@http://www.51cto.com/@1",
-        "华为在线@https://e.huawei.com/cn/talent/portal/#/@1",
+        "Open仓颉@https://opencj.cn/@1",
+        "华为ICT@https://e.huawei.com/cn/talent/portal/#/@1",
         "华为课堂@https://classroom.devcloud.huaweicloud.com/home@1",
         "华为云@https://console.huaweicloud.com/iotdm/@1",
         "猿舟平台@https://www.iyuanzhou.cn/application/appdashboard/@1",
