--- a/project/list2/index.html
+++ b/project/list2/index.html
@@ -165,7 +165,7 @@
         "终身学习@https://le.ouchn.cn/home@1",
         "ApeClass@https://www.apeclass.com/@1",
         "51CTO@http://www.51cto.com/@1",
-        "Open仓颉@https://opencj.cn/@1",
+        "仓颉官网@https://cangjie-lang.cn/@1",
         "华为ICT@https://e.huawei.com/cn/talent/portal/#/@1",
         "华为课堂@https://classroom.devcloud.huaweicloud.com/home@1",
         "华为云@https://console.huaweicloud.com/iotdm/@1",
