--- a/project/list2/index.html
+++ b/project/list2/index.html
@@ -113,7 +113,7 @@
 
 
         "学校VPN@https://117.158.113.226:6443/@0",
-        // "学校OA@http://192.168.200.222:8080/@0",
+        "学校OA@http://192.168.200.222:8080/@0",
         "河南质量工程职业学院@https://www.zlxy.edu.cn/@0",
         "实习备案管理平台@https://sxba.zcj.jyt.henan.gov.cn/@0",
         "就业管理平台@http://hnbysjy.jyt.henan.gov.cn/#/edulogin@0",
