--- a/project/list3/index.html
+++ b/project/list3/index.html
@@ -88,11 +88,13 @@
             <div class="right">
                 <a href="https://www.zlxy.edu.cn/">河南质量工程职业学院</a>
                 <a href="http://192.168.200.222:8080/">学校OA</a>
-                <a href="https://sxba.zcj.jyt.henan.gov.cn/">实习管理平台</a>
-                <a href="http://hnbysjy.jyt.henan.gov.cn/#/edulogin">就业管理平台</a>
                 <a href="http://ssrz.ghlearning.com/">河南双师培训</a>
                 <a href="https://www.hnzjgl.gov.cn/">河南继续教育学习</a>
                 <a href="https://www.hngbwlxy.gov.cn/">河南干部学习网</a>
+                <br>
+                <a href="https://sxba.zcj.jyt.henan.gov.cn/">实习管理平台</a>
+                <a href="http://hnbysjy.jyt.henan.gov.cn/#/edulogin">就业管理平台</a>
+                <a href="https://zlxy.psyyun.com/#/login">心理健康服务平台</a>
                 <br>
                 <a href="http://www.baidu.com/">百度一下</a>
                 <a href="https://zlgcxy.jw.chaoxing.com/admin/">教务系统</a>
