--- a/project/list3/index.html
+++ b/project/list3/index.html
@@ -196,5 +196,7 @@
         }
     }
     createColor();
-    
+    document.querySelector("#title").addEventListener("click", function () {
+        window.location.href = "https://shangcc.top/";
+    });
 </script>
