--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav>
         <ul id="nav">
             <img src="images/banner.png" alt="Logo"
-            onclick="window.location.href='project/list/index.html';"/>
+            onclick="action(4);"/>
             <li onclick="action(4);">首页</li>
             <li onclick="action(0);">前端</li>
             <li onclick="action(1);">编程</li>
